--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -80,4 +80,5 @@ runs:
         name: build-artifacts
         path: |
           ${{ inputs.module_path }}**/target/*.tgz
+          **/bom/*
         retention-days: ${{ inputs.github_artifact_retention }}
