TECH-1270: Use module path to search for boms

--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -80,5 +80,5 @@ runs:
         name: build-artifacts
         path: |
           ${{ inputs.module_path }}**/target/*.tgz
-          **/bom/*
+          ${{ inputs.module_path }}**/bom/*
         retention-days: ${{ inputs.github_artifact_retention }}
