--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -2,6 +2,10 @@ name: build-step-npm
 description: Build step for Jahia NPM module
 
 inputs:
+  github_artifact_name:
+    description: 'Name of the artifacts on GitHub servers'
+    required: false
+    default: 'build-artifacts'
   github_artifact_retention:
     description: 'Time during which artifact are kept in Github infrastructure'
     default: '2'
@@ -77,7 +81,7 @@ runs:
       if: ${{ inputs.archive_artifacts == 'true' }}
       uses: actions/upload-artifact@v4
       with:
-        name: build-artifacts
+        name: ${{ inputs.github_artifact_name }}
         path: |
           ${{ inputs.module_path }}**/target/*.tgz
         retention-days: ${{ inputs.github_artifact_retention }}
