--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -84,4 +84,5 @@ runs:
         name: ${{ inputs.github_artifact_name }}
         path: |
           ${{ inputs.module_path }}**/target/*.tgz
+          ${{ inputs.module_path }}**/bom/*
         retention-days: ${{ inputs.github_artifact_retention }}
