--- a/sbom-processing/action.yml
+++ b/sbom-processing/action.yml
@@ -55,10 +55,8 @@ runs:
       run: |
         echo "::notice title=Dependency Track location::SBOM has been uploaded to: https://${{ inputs.dependencytrack_hostname }} Project name: ${{ inputs.dependencytrack_projectname }} version: ${{ inputs.dependencytrack_projectversion }}"
     
-    # Using a fork until: https://github.com/DependencyTrack/gh-upload-sbom/pull/35 is merged
-    # This fixes the issue faced with INFRA-2967
     - name: Upload sbom to Dependency Track
-      uses: Jahia/gh-upload-sbom@master
+      uses: DependencyTrack/gh-upload-sbom@v3.1.0
       with:
           bomfilename: sbom-all.cdx.json
           serverhostname: ${{ inputs.dependencytrack_hostname }}
