--- a/.github/workflows/release-module.yml
+++ b/.github/workflows/release-module.yml
@@ -33,6 +33,26 @@ on:
         type: string
         required: false
         default: "" 
+      tests_module_path:
+        description: 'Path to a folder in the repository containing a tests module to be built (Both NPM and MVN test module supported)'
+        required: false
+        default: 'tests/jahia-module/'
+      tests_module_type:
+        description: 'Type of module for the tests module (mvn,npm)'
+        required: false
+        default: 'mvn'          
+      git_user_name:
+        description: Git user name
+        default: 'Jahia CI'
+        required: false
+      git_user_email:
+        description: Git user email
+        default: 'jahia-ci@jahia.com'
+        required: false
+      github_artifact_retention:
+        description: 'Time during which artifact are kept in Github infrastructure'
+        required: false
+        default: '2'
 
 jobs:
   release-module:
@@ -84,14 +104,19 @@ jobs:
       - uses: jahia/jahia-modules-action/release@v2
         name: Release Module
         with:
-          github_slug: ${{ env.GITHUB_SLUG }}
           primary_release_branch: ${{ inputs.primary_release_branch }}
-          release_id: ${{ github.event.release.id }}
-          release_version: ${{ github.event.release.tag_name }}
-          github_api_token: ${{ secrets.GH_API_TOKEN }}
+          mvn_settings_filepath: ${{ inputs.mvn_settings_filepath }}
           nexus_username: ${{ env.NEXUS_USERNAME }}
           nexus_password: ${{ env.NEXUS_PASSWORD }}
-          mvn_settings_filepath: ${{ inputs.mvn_settings_filepath }}
+          tests_module_path: ${{ inputs.tests_module_path }}
+          tests_module_type: ${{ inputs.tests_module_type }}
+          github_slug: ${{ env.GITHUB_SLUG }}          
+          release_id: ${{ github.event.release.id }}
+          release_version: ${{ github.event.release.tag_name }}
+          git_user_name: ${{ inputs.git_user_name }}
+          git_user_email: ${{ inputs.git_user_email }}
+          github_api_token: ${{ secrets.GH_API_TOKEN }}
+          github_artifact_retention: ${{ inputs.github_artifact_retention }}
           slack-webhook-qa: ${{ secrets.SLACK_WEBHOOK_URL_RC_FOR_QA }}
 
       - uses: jahia/jahia-modules-action/update-signature@v2
