BACKLOG-23224: Use .jahia.snapshot flag in package.json for NPM modules (#144)
Use the .jahia.snapshot flag defined in the package.json file of our NPM modules to build and release.
In particular, when releasing a module, ensure the flag is disabled (as part of the "prepare release" commit) so the released artifact is not in snapshot mode, and re-renable the flag after releasing (as part of the "prepare for next development iteration" commit).
Also, fix the issue in the "SBOM processing" phase of the release workflow (see this error in the release of luxe-jahia-demo:0.3.0): delegate the build to build-step-npm that uploads the SBOM artifact, which can then be downloaded in the "SBOM processing" phase.

--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -39,7 +39,16 @@ runs:
         MODULE_NAME="${MODULE_NAME////-}"
         echo "MODULE_NAME=$MODULE_NAME" >> $GITHUB_ENV
         MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
-        if [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
+        IS_SNAPSHOT=$(jq '.jahia.snapshot' package.json | cut -d\" -f2 )
+        echo "IS_SNAPSHOT=$IS_SNAPSHOT" >> $GITHUB_ENV
+        if [[ $IS_SNAPSHOT == true ]]; then
+          echo "MODULE_OLD_VERSION=${MODULE_VERSION%%-SNAPSHOT}" >> $GITHUB_ENV
+          echo "MODULE_VERSION=${MODULE_VERSION%%-SNAPSHOT}-SNAPSHOT" >> $GITHUB_ENV
+          echo "MODULE_OLD_VERSION=${MODULE_OLD_VERSION}" 
+          echo "MODULE_VERSION=${MODULE_VERSION}"
+        elif [[ $IS_SNAPSHOT == false ]]; then
+          echo "MODULE_VERSION=${MODULE_VERSION}" >> $GITHUB_ENV
+        elif [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         else
           echo "MODULE_OLD_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
