--- a/release-npm/action.yml
+++ b/release-npm/action.yml
@@ -129,12 +129,15 @@ runs:
     - name: Update package.json
       shell: bash
       run: |
-        # Update package.json to match version precised in release tag
         cd ${{ inputs.module_path }}
+        # Update package.json to match version precised in release tag
         jq '.version |= "${{ env.FINAL_RELEASE_VERSION }}"' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
+        # Disable snapshot mode
+        jq '.jahia.snapshot |= false' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
 
-        if [ ! ${{ env.FINAL_RELEASE_VERSION }} -eq ${{ env.MODULE_VERSION }} ]
-        then
+        # Commit package.json if there are changes
+        if [[ -n "$(git diff --name-only package.json)" ]]; then
+          echo "Commit and push changes to package.json"
           git config user.name ${{ inputs.github_user_name }}
           git config user.email ${{ inputs.github_user_email }}
           git remote set-url origin https://x-access-token:${{ inputs.github_api_token }}@github.com/${{ inputs.github_slug}}
@@ -144,21 +147,12 @@ runs:
         fi
         echo "MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2)" >> $GITHUB_ENV
 
-    - name: Prepare the module
-      shell: bash
-      run: |
-        cd ${{ inputs.module_path }}
-        yarn
-    - name: Build the module
-      shell: bash
-      run: |
-        cd ${{ inputs.module_path }}
-        yarn build
-    - name: Package the module
-      shell: bash
-      run: |
-        cd ${{ inputs.module_path }}
-        yarn jahia-pack
+    - name: Build package
+      uses: jahia/jahia-modules-action/build-step-npm@v2
+      with:
+        module_path: ${{ inputs.module_path }}
+        node_version: ${{ inputs.node_version }}
+        github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
     - name: Update github release for id ${{ inputs.release_id }}
       shell: bash
@@ -177,36 +171,21 @@ runs:
 
     - name: Perform release
       shell: bash
-      run: mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
-
-    - name: Copy artifacts
-      shell: bash
-      run: |
-        mkdir /tmp/artifacts/
-        cd ${{ inputs.module_path }}
-        find . -name "*.tgz" -type f  -maxdepth 3 -mindepth 3 -exec cp {} /tmp/artifacts/ \;
-
-    - name: Release Artifacts
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-artifacts
-        path: |
-          /tmp/artifacts/
-        retention-days: ${{ inputs.github_artifact_retention }}
+      run: mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}target/${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
 
     - name: set next development version into package.json
       shell: bash
       run: |
-        # Update package.json to match next development version
         cd ${{ inputs.module_path }}
+        # Update package.json to match next development version
         jq '.version |= "${{ env.NEXT_DEVELOPMENT_VERSION }}"' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
+        # Enable snapshot mode
+        jq '.jahia.snapshot |= true' package.json > txt.json && jq '.' txt.json > package.json && rm txt.json
         git config user.name ${{ inputs.github_user_name }}
         git config user.email ${{ inputs.github_user_email }}
         git add package.json
         git commit -m "[skip ci] prepare for next development iteration"
         git push
-
 
     - name: Post to a Slack channel
       if: ${{ inputs.slack-webhook-qa }}
