--- a/code-signer/action.yml
+++ b/code-signer/action.yml
@@ -92,9 +92,8 @@ runs:
           echo "Signing $INSTALLER_FILE..."
           ./sign4j ./codeSignTool-sign4j.sh sign \
             -username="${{ inputs.signer_username }}" \
-            -password=${{ inputs.signer_password }} \
+            -password='${{ inputs.signer_password }}' \
             -credential_id="${{ inputs.credential_id }}" \
-            -totp_secret="${{ inputs.totp_secret }}" \
             -output_dir_path="$OUTPUT_DIR" \
             $INSTALLER_FILE # -input_file_path option is replaced by last param
           cp $OUTPUT_DIR/`basename $INSTALLER_FILE` $INSTALLER_FILE # overwrite original file
