--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -22,7 +22,7 @@ runs:
   using: 'composite'
   steps:
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-npm@BACKLOG-23333-move-to-dist-folder
+      uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.module_path }}
         node_version: ${{ inputs.node_version }}
