--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -22,9 +22,20 @@ jobs:
           echo "Hello World!"
       # List of steps to implement:
       # - Automatically move back to jahia-private all issues with the "jahia-only" label
-      # - Automatically add to the "Bug Triage" project all issues with the "need-triage" label
       # - Automatically add to the "Global Roadmap" project all issues with the "Epic" type
       # - Automatically close stale issues (no updates for more than 6 months)
+
+      # https://github.com/marketplace/actions/add-to-github-projects
+      # Add all issues with need-triage label to the Triage project
+      # Official Action from GitHub
+      - uses: actions/add-to-project@1.0.2
+        with:
+          # You can target a project in a different organization
+          # to the issue
+          project-url: https://github.com/orgs/<orgName>/projects/<projectNumber>
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+          labeled: bug, needs-triage
+          label-operator: OR      
 
       # Transfer issues with label "jahia-only" back to jahia-private
       - name: Transfer Issue & Create Stub
