--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -41,3 +41,19 @@ jobs:
               repo: `${{ steps.transfer-issue.outputs.destinatiom_repo }}`,
               body: `@${ context.payload.issue.user.login } your issues was moved back to jahia/jahia-private since it contained the jahia-only label!`
             });
+
+      - name: Echo issue type
+        shell: bash
+        run: |
+          echo ${{ context.payload.issue }}
+
+      # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
+      # https://github.com/orgs/Jahia/projects/18
+      - name: Attach all Epics to the Roadmap - Global project
+        uses: actions/add-to-project@v1.0.2
+        if: ${{ context.payload.issue.type === "Epic" }}
+        with:
+          project-url: https://github.com/orgs/Jahia/projects/18
+          github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
+          labeled: Area:Product, Area:Delivery, Area:Tech, Area:QA, Area:Security
+          label-operator: OR
