--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -42,10 +42,22 @@ jobs:
               body: `@${ context.payload.issue.user.login } your issues was moved back to jahia/jahia-private since it contained the jahia-only label!`
             });
 
-      - name: Echo issue type
-        shell: bash
-        run: |
-          echo ${ context.payload.issue }
+      - uses: actions/github-script@v7
+        id: issue-details
+        with:
+          result-encoding: string
+          retries: 3
+          script: |
+            github.rest.issues.get({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+            })
+
+      - name: View context attributes
+        uses: actions/github-script@v7
+        with:
+          script: console.log(context)
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
