--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -48,7 +48,7 @@ jobs:
           result-encoding: string
           retries: 3
           script: |
-            github.rest.issues.get({
+            return github.rest.issues.get({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
