--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -60,20 +60,25 @@ jobs:
           echo ${{ steps.issue-details.outputs.result}}
 
       - name: Get issue type
-        id: get-issue-type
+        id: issue-type
         uses: actions/github-script@v7
         with:
-          script: console.log(context.payload.issue.type)
+          script: | 
+            if (context.payload.issue.type !== null) {
+              return console.log(context.payload.issue.type.name)
+            }
+            return ''
 
       - name: Hello World
         shell: bash
         run: |
-          echo ${{ steps.get-issue-type.outputs.result}}
+          echo ${{ steps.issue-type.outputs.result}}
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
+        if: steps.issue-type.outputs.result == 'Epic'
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
