--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: | 
-            if (context.payload.issue.type !== null) {
+            if (context.payload.issue.type !== undefined) {
               return console.log(context.payload.issue.type.name)
             }
             return ''
