--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -78,7 +78,7 @@ jobs:
       # https://github.com/orgs/Jahia/projects/18
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
-        if: steps.issue-type.outputs.result == 'Epic'
+        if: ${{ steps.issue-type.outputs.result == 'Epic' }}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
