--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -73,6 +73,14 @@ jobs:
       - name: Get result
         run: echo "${{steps.issue-type.outputs.result}}"
 
+      - uses: actions/github-script@v7
+        id: set-result
+        with:
+          script: return "Hello!"
+          result-encoding: string
+      - name: Get result
+        run: echo "${{steps.set-result.outputs.result}}"
+
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
       - name: Attach all Epics to the Roadmap - Global project
