--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -64,9 +64,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: | 
-            if (context.payload.issue.type !== undefined) {
-              return console.log(context.payload.issue.type.name)
-            }
+            if (context.payload.issue.type !== undefined) {return console.log(context.payload.issue.type.name)}
             return 'Hello'
           result-encoding: string
 
@@ -76,7 +74,7 @@ jobs:
       - uses: actions/github-script@v7
         id: set-result
         with:
-          script: return "Hello!"
+          script: if (context.payload.issue.type !== undefined) {return console.log(context.payload.issue.type.name)}
           result-encoding: string
       - name: Get result
         run: echo "${{steps.set-result.outputs.result}}"
