--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -74,7 +74,7 @@ jobs:
       - uses: actions/github-script@v7
         id: set-result
         with:
-          script: if (context.payload.issue.type !== undefined) {return console.log(context.payload.issue.type.name)}
+          script: return context.payload.issue.type.name
           result-encoding: string
       - name: Get result
         run: echo "${{steps.set-result.outputs.result}}"
