--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -64,20 +64,21 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: | 
-            if (context.payload.issue.type !== undefined) {return console.log(context.payload.issue.type.name)}
-            return 'Hello'
+            if (context.payload.issue.type !== undefined) {
+              return context.payload.issue.type.name
+            }
           result-encoding: string
 
       - name: Get result
         run: echo "${{steps.issue-type.outputs.result}}"
 
-      - uses: actions/github-script@v7
-        id: set-result
-        with:
-          script: return context.payload.issue.type.name
-          result-encoding: string
-      - name: Get result
-        run: echo "${{steps.set-result.outputs.result}}"
+    - uses: actions/github-script@v7
+      id: set-result
+      with:
+        script: return "Hello!"
+        result-encoding: string
+    - name: Get result
+      run: echo "${{steps.set-result.outputs.result}}"
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
