--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -67,18 +67,12 @@ jobs:
             if (context.payload.issue.type !== undefined) {
               return console.log(context.payload.issue.type.name)
             }
-          result-encoding: string
+            return ''
 
-      - name: Get result
-        run: echo "${{steps.issue-type.outputs.result}}"
-
-    - uses: actions/github-script@v7
-      id: set-result
-      with:
-        script: return "Hello!"
-        result-encoding: string
-    - name: Get result
-      run: echo "${{steps.set-result.outputs.result}}"
+      - name: Hello World
+        shell: bash
+        run: |
+          echo ${{ steps.issue-type.outputs.result}}
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
