--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           script: | 
             if (context.payload.issue.type !== undefined) {
-              return context.payload.issue.type.name
+              return context.payload.issue.type.name)
             }
             return ''
 
@@ -73,6 +73,14 @@ jobs:
         shell: bash
         run: |
           echo ${{ steps.issue-type.outputs.result}}
+
+      - uses: actions/github-script@v7
+        id: set-result
+        with:
+          script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name)}
+          result-encoding: string
+      - name: Get result
+        run: echo "${{steps.set-result.outputs.result}}"
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
