--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/github-script@v7
         id: set-result
         with:
-          script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name)}
+          script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name}
           result-encoding: string
       - name: Get result
         run: echo "${{steps.set-result.outputs.result}}"
