--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -43,18 +43,18 @@ jobs:
             });
 
       - uses: actions/github-script@v7
-        id: set-result
+        id: get-issue-type
         with:
           script: if (context.payload.issue.type !== undefined) {return context.payload.issue.type.name}
           result-encoding: string
       - name: Get result
-        run: echo "${{steps.set-result.outputs.result}}"
+        run: echo "${{steps.get-issue-type.outputs.result}}"
 
       # Add all tickets of Type "Epic" and label "Area:" to the global roadmap project
       # https://github.com/orgs/Jahia/projects/18
       - name: Attach all Epics to the Roadmap - Global project
         uses: actions/add-to-project@v1.0.2
-        if: ${{ steps.issue-type.outputs.result == 'Epic' }}
+        if: ${{ steps.get-issue-type.outputs.result == 'Epic' }}
         with:
           project-url: https://github.com/orgs/Jahia/projects/18
           github-token: ${{ secrets.GH_JAHIACI_ISSUES_CHORES }}
