--- a/.github/workflows/issues-chores.yml
+++ b/.github/workflows/issues-chores.yml
@@ -15,6 +15,7 @@ jobs:
     name: Issues Chores
     runs-on: ubuntu-latest
     steps:
+      # Issue type is not available by default, this makes it available for if conditions
       - name: Get Issue type
         uses: actions/github-script@v7
         id: get-issue-type
